Fixed misaligned toolbar actions

--- a/src/components/Toolbar/Toolbar.module.css
+++ b/src/components/Toolbar/Toolbar.module.css
@@ -1,10 +1,8 @@
 .Toolbar {
   background-color: var(--elevation0);
-  border-bottom: thin solid var(--elevation1);
   display: grid;
-  grid-template-columns: auto auto 1fr;
+  grid-template-columns: auto 1fr;
   font-family: 'BenchNine', sans-serif;
-  height: 3rem;
   user-select: none;
   z-index: 100;
   width: 100%;
@@ -13,16 +11,16 @@
 .ToolbarAction {
   align-items: center;
   color: var(--text-primary);
-  display: flex;
+  display: inline-flex;
   font-size: 1.4em;
   font-weight: 500;
   justify-content: center;
   line-height: 1em;
+  padding: 0.65em;
   text-decoration: none;
   text-transform: uppercase;
   transition: background-color 150ms ease-in-out, color 150ms ease-in-out;
   white-space: nowrap;
-  width: 10rem;
 }
 
 .ToolbarAction:hover {
@@ -36,16 +34,15 @@
 
 .ToolbarActions {
   display: flex;
-  overflow: hidden;
 }
 
 .ToolbarHeading {
   align-items: center;
   display: flex;
   font-size: 1.4em;
-  font-weight: 500;
   justify-content: center;
-  padding: 0;
+  line-height: 1em;
+  padding: 0.65em;
   text-transform: uppercase;
   width: 15rem;
 }
@@ -87,6 +84,8 @@
 .ToolbarMobileMenu {
   background-color: var(--elevation1);
   bottom: 0;
+  display: flex;
+  flex-direction: column;
   left: 0;
   overflow: auto;
   position: absolute;
@@ -96,6 +95,7 @@
 }
 
 .ToolbarMobileMenu .ToolbarAction {
+  flex: unset;
   font-family: 'BenchNine', sans-serif;
   font-size: 1.5em;
   padding: 0.75em 1em;
@@ -105,29 +105,20 @@
   color: var(--brand);
   line-height: 1em;
   margin-left: 0.15em;
-  margin-top: 0.15em;
 }
 
-.ToolbarTitleResponsive,
 .ToolbarTitle {
   color: var(--text-highlight);
   line-height: 1em;
-  margin-top: 0.15em;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
-
-.ToolbarTitleResponsive {
-  display: none;
 }
 
 @media (max-width: 1024px) {
   .ToolbarAction {
     flex: 1;
     font-size: 1.1em;
-    padding: 0.65em;
-    width: unset;
   }
 
   .ToolbarHeading {
@@ -136,8 +127,16 @@
 }
 
 @media (max-width: 768px) {
+  .Toolbar {
+    display: flex;
+  }
+
   .ToolbarActions {
     display: none;
+  }
+
+  .ToolbarHeading {
+    width: unset;
   }
 
   .ToolbarMobileButton {
